adding images and background colour

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>Planets of the Solar System</title>
 </head>
-<body>
+<body style="background-color:yellow;">
   <h1><em>Planets of the Solar System</em></h1>
   <table cellpadding=2 cellspacing=0 border=1 class="ws-table-all" id="planets">
     <tr>
+        <th>Image</th>
         <th>Planet</th>
         <th>Order</th>
         <th>Mass</th>
@@ -22,6 +23,7 @@
         <th>Revolutionary period</th>
     </tr>
     <tr>
+        <td><img src="./images/mercury_(planet).jpg"></td>
         <td>Mercury</td>
         <td>1st</td>
         <td>330 Yg</td>
@@ -36,6 +38,7 @@
         <td>87.9691 Earth days</td>
     </tr>
     <tr>
+        <td><img src="./images/venus.jpg"></td>
         <td>Venus</td>
         <td>2nd</td>
         <td>4870 Yg</td>
@@ -50,6 +53,7 @@
         <td>227.7 Earth days</td>
     </tr>
     <tr>
+        <td><img src="./images/earth.jpg"></td>
         <td>Earth</td>
         <td>3rd</td>
         <td>5980 Yg</td>
@@ -64,6 +68,7 @@
         <td>365.26 Earth days</td>
     </tr>
     <tr>
+        <td><img src="./images/mars.jpg"></td>
         <td>Mars</td>
         <td>4th</td>
         <td>642 Yg</td>
@@ -78,6 +83,7 @@
         <td>686.9 Earth days (668.5991 sols)</td>
     </tr>
     <tr>
+        <td><img src="./images/jupiter.jpg"></td>
         <td>Jupiter</td>
         <td>5th</td>
         <td>1900000 Yg</td>
@@ -92,6 +98,7 @@
         <td>11.862 Earth years</td>
     </tr>
     <tr>
+        <td><img src="./images/saturn.jpg"></td>
         <td>Saturn</td>
         <td>6th</td>
         <td>569000 Yg</td>
@@ -106,6 +113,7 @@
         <td>29.4571 Earth years</td>
     </tr>
     <tr>
+        <td><img src="./images/uranus.jpg"></td>
         <td>Uranus</td>
         <td>7th</td>
         <td>86800 Yg</td>
@@ -120,6 +128,7 @@
         <td>84.0205 Earth years</td>
     </tr>
     <tr>
+        <td><img src="./images/neptune.jpg"></td>
         <td>Neptune</td>
         <td>8th</td>
         <td>102000 Yg</td>
