--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:yellow;">
   <h1><em>Planets of the Solar System</em></h1>
-  <table cellpadding=2 cellspacing=0 border=1 class="ws-table-all" id="planets">
+  <table cellpadding=2 border=1 class="ws-table-all" id="planets">
     <tr>
         <th>Image</th>
         <th>Planet</th>
@@ -23,7 +23,7 @@
         <th>Revolutionary period</th>
     </tr>
     <tr>
-        <td><img src="./images/mercury_(planet).jpg"></td>
+        <td><alt><img src="./images/mercury_(planet).jpg"></alt></td>
         <td>Mercury</td>
         <td>1st</td>
         <td>330 Yg</td>
