--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:yellow;">
   <h1><em>Planets of the Solar System</em></h1>
-  <table cellpadding=2 border=1 class="ws-table-all" id="planets">
+  <table border=1 class="ws-table-all" id="planets">
     <tr>
         <th>Image</th>
         <th>Planet</th>
@@ -23,7 +23,7 @@
         <th>Revolutionary period</th>
     </tr>
     <tr>
-        <td><alt><img src="./images/mercury_(planet).jpg"></alt></td>
+        <td><img alt="No" src="./images/mercury_(planet).jpg"></alt></td>
         <td>Mercury</td>
         <td>1st</td>
         <td>330 Yg</td>
@@ -38,12 +38,12 @@
         <td>87.9691 Earth days</td>
     </tr>
     <tr>
-        <td><img src="./images/venus.jpg"></td>
+        <td><img alt="No" src="./images/venus.jpg"></td>
         <td>Venus</td>
         <td>2nd</td>
         <td>4870 Yg</td>
         <td>12.104 Mm</td>
-        <td>5250 kg/m<sup>3</td>
+        <td>5250 kg/m<sup>3</sup></td>
         <td>0.723 AU</td>
         <td>737 K</td>
         <td>9.3 MPa</td>
@@ -53,7 +53,7 @@
         <td>227.7 Earth days</td>
     </tr>
     <tr>
-        <td><img src="./images/earth.jpg"></td>
+        <td><img alt="No" src="./images/earth.jpg"></td>
         <td>Earth</td>
         <td>3rd</td>
         <td>5980 Yg</td>
@@ -68,12 +68,12 @@
         <td>365.26 Earth days</td>
     </tr>
     <tr>
-        <td><img src="./images/mars.jpg"></td>
+        <td><img alt="No" src="./images/mars.jpg"></td>
         <td>Mars</td>
         <td>4th</td>
         <td>642 Yg</td>
         <td>6.787 Mm</td>
-        <td>3940 kg/m<sup>3</td>
+        <td>3940 kg/m<sup>3</sup></td>
         <td>1.026 AU</td>
         <td>210 K</td>
         <td>6.105 hPa</td>
@@ -83,7 +83,7 @@
         <td>686.9 Earth days (668.5991 sols)</td>
     </tr>
     <tr>
-        <td><img src="./images/jupiter.jpg"></td>
+        <td><img alt="No" src="./images/jupiter.jpg"></td>
         <td>Jupiter</td>
         <td>5th</td>
         <td>1900000 Yg</td>
@@ -98,7 +98,7 @@
         <td>11.862 Earth years</td>
     </tr>
     <tr>
-        <td><img src="./images/saturn.jpg"></td>
+        <td><img alt="No" src="./images/saturn.jpg"></td>
         <td>Saturn</td>
         <td>6th</td>
         <td>569000 Yg</td>
@@ -113,7 +113,7 @@
         <td>29.4571 Earth years</td>
     </tr>
     <tr>
-        <td><img src="./images/uranus.jpg"></td>
+        <td><img alt="No" src="./images/uranus.jpg"></td>
         <td>Uranus</td>
         <td>7th</td>
         <td>86800 Yg</td>
@@ -128,7 +128,7 @@
         <td>84.0205 Earth years</td>
     </tr>
     <tr>
-        <td><img src="./images/neptune.jpg"></td>
+        <td><img alt="No" src="./images/neptune.jpg"></td>
         <td>Neptune</td>
         <td>8th</td>
         <td>102000 Yg</td>
