--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>Planets of the Solar System</title>
 </head>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
 <body style="background-color:yellow;">
   <h1><em>Planets of the Solar System</em></h1>
-  <table border=1 class="ws-table-all" id="planets">
+  <table class="ws-table-all" id="planets">
     <tr>
         <th>Image</th>
         <th>Planet</th>
@@ -23,7 +28,7 @@
         <th>Revolutionary period</th>
     </tr>
     <tr>
-        <td><img alt="No" src="./images/mercury_(planet).jpg"></alt></td>
+        <td><img alt="No" src="./images/mercury_(planet).jpg"></td>
         <td>Mercury</td>
         <td>1st</td>
         <td>330 Yg</td>
